--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
+    /* font-family: 'Inter', sans-serif;
+    font-family: 'Lobster', cursive;
+    font-family: 'Poppins', sans-serif; */
 }
 
 .banner {
@@ -15,7 +18,7 @@ body {
 }
 
 .banner h1 {
-    font-family: Inter;
+    font-family: 'Inter', sans-serif;
     font-weight: 700;
     text-align: center;
     font-size: 65px;
@@ -24,7 +27,7 @@ body {
 }
 
 .banner p {
-    font-family: poppins;
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     padding: 15px 15px;
     color: white;
@@ -32,15 +35,84 @@ body {
 
 }
 
-.banner a {
+.donate-now-button {
     text-decoration: none;
     text-align: center;
     margin-left: 45%;
-    margin-top: 40px;
-    font-family: Inter;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-family: 'Inter', sans-serif;
     font-weight: 600;
     color: white;
     background-color: #FF5959;
     padding: 16px 12px;
     border-radius: 5px;
+}
+
+.donate-today {
+    margin-top: 100px;
+}
+
+.donate-today input {
+    width: 50%;
+    text-align: center;
+    color: #B3B3B3;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #707070;
+}
+
+.head-tag {
+    font-family: 'Inter', sans-serif;
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 54px;
+    text-align: center;
+    color: #121212;
+
+}
+
+.head-tag2 {
+    font-family: 'Inter', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+    text-align: center;
+    color: #707070;
+    padding: 20px 20px;
+    background-color: #FAFAFA;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+
+#head-tag2-color {
+    font-family: 'Inter', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36px;
+    text-align: center;
+    color: #FF5959;
+    padding: 20px 20px;
+    background-color: #FFEEEE;
+    border-radius: 5px;
+    margin-right: 20px;
+    border: 1px solid #FF5959;
+}
+
+#donate-amount {
+    display: flex;
+    justify-content: center;
+}
+
+.para-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    padding: 15px 15px;
+    color: #707070;
+    text-align: center;
 }
