--- a/style.css
+++ b/style.css
@@ -104,9 +104,10 @@ body {
     border: 1px solid #FF5959;
 }
 
-#donate-amount {
+.donate-amount {
     display: flex;
     justify-content: center;
+
 }
 
 .para-text {
@@ -115,4 +116,39 @@ body {
     padding: 15px 15px;
     color: #707070;
     text-align: center;
+}
+
+.card {
+    width: 30%;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 360px;
+    width: 352px;
+}
+
+.card img {
+    margin-top: 50px;
+    margin-left: 30px;
+    size: 16px;
+}
+
+.card h3 {
+    margin-left: 30px;
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: #121212;
+
+}
+
+.card p {
+    margin-left: 30px;
+    margin-right: 30px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #707070;
+    text-align: justify;
+
 }
