--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     margin-top: 100px;
 }
 
-.donate-today input {
+.input-donate {
     width: 50%;
     text-align: center;
     color: #B3B3B3;
@@ -151,4 +151,35 @@ body {
     color: #707070;
     text-align: justify;
 
+}
+
+form {
+    background-color: #FFF4D6;
+    width: 809px;
+    height: 200px;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+}
+
+form input {
+    margin-top: 100px;
+    border: none;
+    background-color: #D9D9D9;
+    color: #AA9F9F;
+    height: 30px;
+    outline: none;
+}
+
+form button {
+
+    background-color: #FF5959;
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    font-size: 16px;
+    height: 30px;
+    border: none;
 }
