--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 0;
     /* font-family: 'Inter', sans-serif;
     font-family: 'Lobster', cursive;
     font-family: 'Poppins', sans-serif; */
@@ -182,4 +183,25 @@ form button {
     font-size: 16px;
     height: 30px;
     border: none;
+}
+
+footer {
+    height: 177px;
+    width: 100vw;
+    background-color: #0B0D17;
+}
+
+footer h1 {
+    font-family: 'Lobster', cursive;
+    font-size: 36px;
+    color: #FF5959;
+    text-align: center;
+    padding-top: 30px;
+}
+
+footer p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    color: #D9DBE1;
+    text-align: center;
 }
